--- a/android_app/app/src/main/res/values/strings.xml
+++ b/android_app/app/src/main/res/values/strings.xml
@@ -4,6 +4,30 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
+    <string name="navigation_drawer_scan">Scan</string>
+    <string name="navigation_drawer_users">Users</string>
+    <string name="navigation_drawer_attack">Attack</string>
+    <string name="navigation_drawer_detector">Detector</string>
+    <string name="navigation_drawer_settings">Settings</string>
+    <string name="navigation_drawer_info">Info</string>
+
+    <string name="navigation_drawer_group">Online</string>
+    <string name="navigation_drawer_donate">Donate</string>
+    <string name="navigation_drawer_github">GitHub</string>
+    <string name="navigation_drawer_discord">Discord server</string>
+
+
     <string name="action_openbrowser">Open web interface</string>
     <string name="action_serveraddress">Change server IP</string>
+    <string-array name="donation_google_catalog_values">
+        <item>$1</item>
+        <item>$2</item>
+        <item>$4</item>
+        <item>$5</item>
+        <item>$6</item>
+        <item>$10</item>
+        <item>$15</item>
+    </string-array>
+
+    <string name="donation_paypal_item">Donation</string>
 </resources>
